--- a/solidity/.env.example
+++ b/solidity/.env.example
@@ -1,3 +1,5 @@
 TESTNET_RPC_URL="https://rpc.ankr.com/avalanche_fuji"
 MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
+SNOWTRACE_API_KEY=""
+COINMARKETCAP_API_KEY=""
 PRIVATE_KEY="0xPRIVATE_KEY"
