--- a/solidity/package.json
+++ b/solidity/package.json
@@ -14,6 +14,7 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "chai": "^4.3.7",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0",
@@ -21,7 +22,9 @@
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^5.0.4",
-    "chalk": "^4.1.2"
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@primitivefi/hardhat-dodoc": "^0.2.3"
   }
 }
