--- a/solidity/.env.example
+++ b/solidity/.env.example
@@ -3,3 +3,7 @@ MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 SNOWTRACE_API_KEY=""
 COINMARKETCAP_API_KEY=""
 PRIVATE_KEY="0xPRIVATE_KEY"
+
+TENDERLY_FORK=""
+TENDERLY_PROJECT=""
+TENDERLY_USERNAME=""
