--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,16 @@ PRIVATE_KEY=""
 
 TENDERLY_FORK=""
 TENDERLY_PROJECT=""
-TENDERLY_USERNAME="Soxzer"
+TENDERLY_USERNAME=""
 
 
 # NEXT CONFIG
 NEXT_PUBLIC_TESTNET_RPC_URL="https://rpc.ankr.com/avalanche_fuji"
 NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 NEXT_PUBLIC_BC_ENV="development"
+
+# NEST CONFIG
+IS_DDB_LOCAL=true
+AWS_REGION="eu-west-3"
+AWS_SERVICE="work-aurora-api"
+AWS_STAGE="dev"
