--- a/serverless.yml
+++ b/serverless.yml
@@ -1,13 +1,46 @@
 service: work-aurora-api
 
-plugins:
-  - 'serverless-plugin-typescript'
-  - serverless-plugin-optimize
-  - serverless-offline
-
 provider:
   name: aws
   runtime: nodejs18.x
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'eu-west-3'}
+  environment:
+    SERVICE: ${self:service}
+    STAGE: ${self:provider.stage}
+    REGION: ${self:provider.region}
+    NO_COLOR: ${env:NO_COLOR, 'true'}
+  apiGateway:
+    shouldStartNameWithService: true
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:DescribeTable
+            - dynamodb:Query
+            - dynamodb:Scan
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+            - dynamodb:UpdateItem
+            - dynamodb:DeleteItem
+          Resource: arn:aws:dynamodb:${self:provider.region}:*:*
+
+plugins:
+  - 'serverless-plugin-typescript'
+  - serverless-dynamodb-local
+  - serverless-plugin-optimize
+  - serverless-offline
+
+custom:
+  dynamodb:
+    stages:
+      - ${self:provider.stage}
+    start:
+      port: 8000
+      inMemory: true
+      migrate: true
+      seed: false
 
 functions:
   main: # The name of the lambda function
@@ -15,5 +48,6 @@ functions:
     handler: packages/api/src/lambda.handler
     events:
       - http:
+          cors: true
+          path: '{proxy+}'
           method: any
-          path: /{any+}
