--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "work-aurora",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "ddb:gen": "ts-node gen-ddb-resource.ts -- \"packages/api/src/**/*.schema.ts\" \"packages/api/resource/dynamodb.yml\""
+  },
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -35,9 +37,11 @@
     "@types/aws-lambda": "^8.10.114",
     "@types/aws-serverless-express": "^3.3.5",
     "@types/jest": "^29.4.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "aws-lambda": "^1.0.7",
@@ -45,8 +49,10 @@
     "babel-jest": "^29.4.1",
     "chai": "^4.3.7",
     "chalk": "^5.2.0",
+    "change-case": "^4.1.2",
     "cypress": "^12.2.0",
     "dotenv": "^16.0.3",
+    "dynamodb-localhost": "^0.0.9",
     "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.3.0",
@@ -57,15 +63,18 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "ethers": "^5.7.2",
+    "glob-promise": "^6.0.2",
     "hardhat": "^2.14.0",
     "hardhat-gas-reporter": "^1.0.9",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "js-yaml": "^4.1.0",
     "nx": "16.0.1",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-optimize": "4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.4",
@@ -79,12 +88,15 @@
     "@chakra-ui/react": "^2.6.0",
     "@fontsource/comfortaa": "^4.5.11",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
     "axios": "^1.0.0",
+    "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "i18next": "^22.4.15",
+    "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
@@ -94,6 +106,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "wagmi": "^0.12.12"
   }
 }
