--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ TENDERLY_USERNAME=""
 NEXT_PUBLIC_TESTNET_RPC_URL="https://api.avax-test.network/ext/bc/C/rpc"
 NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 NEXT_PUBLIC_BC_ENV="development"
+NEXT_PUBLIC_API_URL="localhost"
+NEXT_PUBLIC_API_PORT="3000"
 
 # NEST CONFIG
 IS_DDB_LOCAL=true
