--- a/package.json
+++ b/package.json
@@ -93,22 +93,27 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
+    "class-validator": "^0.14.0",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "i18next": "^22.4.15",
+    "joi": "^17.9.2",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "siwe": "^2.1.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "wagmi": "^0.12.12"
