--- a/serverless.yml
+++ b/serverless.yml
@@ -53,3 +53,6 @@ functions:
           cors: true
           path: '{proxy+}'
           method: any
+
+resources:
+  - ${file(packages/api/resource/dynamodb.yml)}
