--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # SOLIDITY CONFIG
 SNOWTRACE_API_KEY=""
 COINMARKETCAP_API_KEY=""
-PRIVATE_KEY=""
+HARDHAT_PRIVATE_KEY_1=""
+HARDHAT_PRIVATE_KEY_2=""
 
 TENDERLY_FORK=""
 TENDERLY_PROJECT=""
 TENDERLY_USERNAME=""
 
-
-# NEXT CONFIG
-NEXT_PUBLIC_TESTNET_RPC_URL="https://rpc.ankr.com/avalanche_fuji"
-NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
-NEXT_PUBLIC_BC_ENV="development"
+# Avalanche CONFIG
+AVAX_PUBLIC_TESTNET_RPC_URL="https://api.avax-test.network/ext/bc/C/rpc"
+AVAX_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
+AVAX_PUBLIC_BC_ENV="development"
 
 # NEST CONFIG
 IS_DDB_LOCAL=true
