chore: add solidity as a monorepo package, enable nx build lint test deploy

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@work-aurora/solidity": ["packages/solidity/*"],
       "@workaurora/front-provider": ["packages/front-provider/src/index.ts"],
       "@workaurora/front/*": ["packages/front/*"],
       "@workaurora/themes": ["packages/themes/src/index.ts"],
