--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
 # SOLIDITY CONFIG
 SNOWTRACE_API_KEY=""
 COINMARKETCAP_API_KEY=""
-HARDHAT_PRIVATE_KEY_1=""
-HARDHAT_PRIVATE_KEY_2=""
+HARDHAT_PRIVATE_KEYS=""
 
 TENDERLY_FORK=""
 TENDERLY_PROJECT=""
 TENDERLY_USERNAME=""
 
-# Avalanche CONFIG
 AVAX_PUBLIC_TESTNET_RPC_URL="https://api.avax-test.network/ext/bc/C/rpc"
 AVAX_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 AVAX_PUBLIC_BC_ENV="development"
