--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nx/react": "16.0.1",
     "@nx/webpack": "16.0.1",
     "@nx/workspace": "16.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.23.1",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@tenderly/hardhat-tenderly": "^1.7.2",
     "@testing-library/react": "14.0.0",
@@ -49,7 +50,7 @@
     "aws-serverless-express": "^3.4.0",
     "babel-jest": "^29.4.1",
     "chai": "^4.3.7",
-    "chalk": "^5.2.0",
+    "chalk": "^4.1.2",
     "change-case": "^4.1.2",
     "cypress": "^12.2.0",
     "dotenv": "^16.0.3",
