--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
