chore: add solidity as a monorepo package, enable nx build lint test … (#1)
* chore: add solidity as a monorepo package, enable nx build lint test deploy

* feat: add foundry

* fix: AVAX to NEXT

---------

Co-authored-by: Nicolas Cortella <nicolascortella@Nicolass-MacBook-Pro.local>
Co-authored-by: KonyTech <nicolas.cortella@gmail.com>

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-foundry": "^1.0.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
@@ -30,6 +31,7 @@
     "@nx/react": "16.0.1",
     "@nx/webpack": "16.0.1",
     "@nx/workspace": "16.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.23.1",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@tenderly/hardhat-tenderly": "^1.7.2",
     "@testing-library/react": "14.0.0",
@@ -49,7 +51,7 @@
     "aws-serverless-express": "^3.4.0",
     "babel-jest": "^29.4.1",
     "chai": "^4.3.7",
-    "chalk": "^5.2.0",
+    "chalk": "^4.1.2",
     "change-case": "^4.1.2",
     "cypress": "^12.2.0",
     "dotenv": "^16.0.3",
