feat: Add most of the API and Frontend for register

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -11,6 +11,8 @@
     }
   ],
   "compilerOptions": {
+    "target": "ESnext",
+    "module": "CommonJS",
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "incremental": false
