--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
     "@fontsource/comfortaa": "^4.5.11",
     "@nestjs/common": "^9.0.0",
@@ -103,6 +104,7 @@
     "class-validator": "^0.14.0",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "i18next": "^22.4.15",
     "joi": "^17.9.2",
     "nestjs-dynamoose": "^0.5.4",
@@ -118,6 +120,7 @@
     "siwe": "^2.1.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.12"
+    "wagmi": "^0.12.12",
+    "yup": "^1.1.1"
   }
 }
