--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "formik": "^2.2.9",
     "i18next": "^22.4.15",
     "joi": "^17.9.2",
+    "lodash": "^4.17.21",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
