feature: Register account (#3)
* [WIP] Prepare siwe guard and register and login with JWT too, need to sleep

* chore: Start showing back to jack and better way to handle auth and user service

* fix: update dynamodb schema

* fix: Fix lock

* chore: Add script for DDB in local

* feat(login): query user in db based on wallet (#2)

* feat: Add most of the API and Frontend for register

* FEAT/user-schema: attributs with validation (#4)

* feat(user-schema): attributs with validation

* fix(user-schema): invalid validation

* feat(user-schema): add interface + add createdAt field

* refactor(user-schema): add updatedAt

* feat: Move regex in utils package

* fix: Rename userType to currentUserType

* feat(register): create user in db (#5)

* feat(register): create user in db

* refactor(register): client profile and worker profile

* refactor(schema): add tos

* refactor: use destructing

* refactor: use lodash for destructuring

* fix: return void instead of creating one

* fix: Fix controller as any fuck any

* fix: Fix problem on schema

* feat(user-schema): add worker and recruiter

* fix: change login button

---------

Co-authored-by: Jean Cardonne <contact@jcardonne.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -27,7 +27,7 @@ provider:
           Resource: arn:aws:dynamodb:${self:provider.region}:*:*
 
 plugins:
-  - 'serverless-plugin-typescript'
+  - serverless-plugin-typescript
   - serverless-dynamodb-local
   - serverless-plugin-optimize
   - serverless-offline
@@ -43,6 +43,8 @@ custom:
       seed: false
   optimize:
     external: ['swagger-ui-dist']
+  serverlessPluginTypescript:
+    tsConfigFileLocation: 'packages/api/tsconfig.app.json'
 
 functions:
   main: # The name of the lambda function
@@ -53,3 +55,6 @@ functions:
           cors: true
           path: '{proxy+}'
           method: any
+
+resources:
+  - ${file(packages/api/resource/dynamodb.yml)}
