--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ddb:gen": "ts-node gen-ddb-resource.ts -- \"packages/api/src/**/*.schema.ts\" \"packages/api/resource/dynamodb.yml\"",
+    "ddb:dev": "serverless dynamodb start",
     "sls:dev": "serverless offline start --noPrependStageInUrl"
   },
   "private": true,
@@ -88,29 +89,39 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
     "@fontsource/comfortaa": "^4.5.11",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "i18next": "^22.4.15",
+    "joi": "^17.9.2",
+    "lodash": "^4.17.21",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "siwe": "^2.1.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.12"
+    "wagmi": "^0.12.12",
+    "yup": "^1.1.1"
   }
 }
