feat: user verification with kycid
remove forge-std

instructions and remapping

remove todo and tsconfig

tsconfig

user verification with kycId

--- a/packages/solidity/tsconfig.json
+++ b/packages/solidity/tsconfig.json
@@ -8,12 +8,8 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
   },
-  "files": [],
-  "include": [],
+  "files": ["./hardhat.config.ts"],
+  "include": ["./scripts", "./test", "./typechain-types"],
   "references": []
 }
