feat: add Login, seeder, auth on API and many other things

--- a/serverless.yml
+++ b/serverless.yml
@@ -40,7 +40,8 @@ custom:
       port: 8000
       inMemory: true
       migrate: true
-      seed: false
+      seed: true
+    seed: ${file(packages/api/resource/seed.yml)}
   optimize:
     external: ['swagger-ui-dist']
   serverlessPluginTypescript:
