--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
@@ -102,6 +103,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "formik": "^2.2.9",
@@ -112,6 +114,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
