--- a/package.json
+++ b/package.json
@@ -89,9 +89,13 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.1.1",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
+    "@chakra-ui/styled-system": "^2.9.0",
+    "@emotion/react": "^11.10.8",
     "@fontsource/comfortaa": "^4.5.11",
+    "@fontsource/montserrat": "^4.5.14",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
