feat: Whole login flow

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,5 @@ AWS_STAGE="dev"
 FRONT_PROTOCOL="http://"
 FRONT_URL="localhost:4200"
 JWT_SECRET_KEY="SECRET_KEY"
+COOKIE_SECRET_KEY="SECRET_KEY"
 
