--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@typechain/hardhat": "^6.1.5",
     "@types/aws-lambda": "^8.10.114",
     "@types/aws-serverless-express": "^3.3.5",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -113,6 +115,7 @@
     "formik": "^2.2.9",
     "i18next": "^22.4.15",
     "joi": "^17.9.2",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
