feat: add Login, seeder, auth on API and many other things
feat(ethermodule): init


feat(ether-module): rename client to employer + update to db


fix: pr conversations


feat(get-user): add jwt guard


feat(ethers-module): signs several messages


feat: pr conversations

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,4 @@ FRONT_PROTOCOL="http://"
 FRONT_URL="localhost:4200"
 JWT_SECRET_KEY="SECRET_KEY"
 COOKIE_SECRET_KEY="SECRET_KEY"
-
+WALLET_PRIVATE_KEY=""
