--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ IS_DDB_LOCAL=true
 AWS_REGION="eu-west-3"
 AWS_SERVICE="work-aurora-api"
 AWS_STAGE="dev"
+FRONT_PROTOCOL="http://"
+FRONT_URL="localhost:4200"
+JWT_SECRET_KEY="SECRET_KEY"
+COOKIE_SECRET_KEY="SECRET_KEY"
+
