--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@typechain/hardhat": "^6.1.5",
     "@types/aws-lambda": "^8.10.114",
     "@types/aws-serverless-express": "^3.3.5",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
@@ -89,12 +91,17 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.1.1",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
+    "@chakra-ui/styled-system": "^2.9.0",
+    "@emotion/react": "^11.10.8",
     "@fontsource/comfortaa": "^4.5.11",
+    "@fontsource/montserrat": "^4.5.14",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
@@ -102,16 +109,19 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "i18next": "^22.4.15",
     "joi": "^17.9.2",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
