feat: Rename project to agora, and start product page

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-intersection-observer": "^9.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "siwe": "^2.1.4",
