--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@work-aurora/solidity": ["packages/solidity/"],
-      "@workaurora/front-provider": ["packages/front-provider/src/index.ts"],
-      "@workaurora/front/*": ["packages/front/*"],
-      "@workaurora/themes": ["packages/themes/src/index.tsx"],
-      "@workaurora/utils": ["packages/utils/src/index.ts"]
+      "@workagora/front-provider": ["packages/front-provider/src/index.ts"],
+      "@workagora/front/*": ["packages/front/*"],
+      "@workagora/themes": ["packages/themes/src/index.tsx"],
+      "@workagora/utils": ["packages/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
