--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # SOLIDITY CONFIG
 SNOWTRACE_API_KEY=""
 COINMARKETCAP_API_KEY=""
-HARDHAT_PRIVATE_KEYS=""
+PRIVATE_KEY=""
 
 TENDERLY_FORK=""
 TENDERLY_PROJECT=""
 TENDERLY_USERNAME=""
 
-NEXT_PUBLIC_TESTNET_RPC_URL="https://api.avax-test.network/ext/bc/C/rpc"
+# NEXT CONFIG
+NEXT_PUBLIC_TESTNET_RPC_URL="https://rpc.ankr.com/avalanche_fuji"
 NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 NEXT_PUBLIC_BC_ENV="development"
 NEXT_PUBLIC_API_URL="localhost"
@@ -20,6 +21,5 @@ AWS_SERVICE="work-aurora-api"
 AWS_STAGE="dev"
 FRONT_PROTOCOL="http://"
 FRONT_URL="localhost:4200"
-JWT_SECRET_KEY="SECRET_KEY"
-COOKIE_SECRET_KEY="SECRET_KEY"
+JWT_SECRET_KEY=""
 WALLET_PRIVATE_KEY=""
