feat(kyc): PR #1

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ FRONT_PROTOCOL="http://"
 FRONT_URL="localhost:4200"
 JWT_SECRET_KEY=""
 WALLET_PRIVATE_KEY=""
+
+# Synaps KYC
+SYNAPS_CLIENT_ID=""
+SYNAPS_API_KEY=""
+SYNAPS_API_BASE_URL='https://individual-api.synaps.io/v3'
