--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -11,6 +11,22 @@ Resources:
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
+  KycTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-kyc-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: wallet
+          AttributeType: S
+        - AttributeName: sessionId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: wallet
+          KeyType: HASH
+        - AttributeName: sessionId
+          KeyType: RANGE
   UserTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
