--- a/packages/solidity/project.json
+++ b/packages/solidity/project.json
@@ -8,7 +8,7 @@
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/artifacts", "{projectRoot}/typechain-types", "{projectRoot}/out"],
       "options": {
-        "command": "npx hardhat compile",
+        "command": "rm -rf artifacts cache typechain-types && npx hardhat compile",
         "cwd": "packages/solidity"
       }
     },
