feat: Add swiper for partners and fix some on intersection observer, start adding technology block

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/swiper": "^6.0.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -135,6 +136,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "siwe": "^2.1.4",
+    "swiper": "^9.2.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "wagmi": "^0.12.12",
