--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/swiper": "^6.0.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -97,6 +98,7 @@
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.0",
     "@chakra-ui/styled-system": "^2.9.0",
+    "@chakra-ui/theme-tools": "^2.0.16",
     "@emotion/react": "^11.10.8",
     "@fontsource/comfortaa": "^4.5.11",
     "@fontsource/montserrat": "^4.5.14",
@@ -125,13 +127,16 @@
     "next-i18next": "^13.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "perfect-scrollbar": "^1.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-intersection-observer": "^9.4.3",
+    "react-perfect-scrollbar": "^1.5.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "siwe": "^2.1.4",
+    "swiper": "^9.2.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "wagmi": "^0.12.12",
