--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.8",
     "i18next": "^22.4.15",
     "joi": "^17.9.2",
     "js-cookie": "^3.0.5",
