feat(rating-backend): init module, need sm implementation
feat(rating-backend): fix schema + getRatings


chore: toLowerCase tx

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -11,6 +11,31 @@ Resources:
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
+  RatingTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-rating-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: txHash
+          AttributeType: S
+        - AttributeName: wallet
+          AttributeType: S
+      KeySchema:
+        - AttributeName: txHash
+          KeyType: HASH
+        - AttributeName: wallet
+          KeyType: RANGE
+      GlobalSecondaryIndexes:
+        - IndexName: TxHashIndex
+          KeySchema:
+            - AttributeName: txHash
+              KeyType: HASH
+            - AttributeName: walletReceiver
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
   KycTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
