feat(WIP): init nft.storage

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@rainbow-me/rainbowkit": "^0.12.12",
     "@synaps-io/react-verify": "^1.0.3",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -127,6 +128,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "nft.storage": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^1.5.5",
