feat(rating): encode review to cid

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -11,6 +11,22 @@ Resources:
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
+  KycTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-kyc-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: wallet
+          AttributeType: S
+        - AttributeName: sessionId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: wallet
+          KeyType: HASH
+        - AttributeName: sessionId
+          KeyType: RANGE
   RatingTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
@@ -18,12 +34,12 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-rating-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: txHash
+        - AttributeName: cidIPFS
           AttributeType: S
         - AttributeName: wallet
           AttributeType: S
       KeySchema:
-        - AttributeName: txHash
+        - AttributeName: cidIPFS
           KeyType: HASH
         - AttributeName: wallet
           KeyType: RANGE
