--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "ddb:gen": "ts-node gen-ddb-resource.ts -- \"packages/api/src/**/*.schema.ts\" \"packages/api/resource/dynamodb.yml\"",
     "ddb:dev": "serverless dynamodb start",
-    "sls:dev": "serverless offline start --noPrependStageInUrl"
+    "sls:dev": "serverless offline start --noPrependStageInUrl",
+    "build": "tsc -p packages/api",
+    "start:dev": "nodemon packages/api/src/main.ts",
+    "start": "node packages/api/src/main.ts"
   },
   "private": true,
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@chainlink/hardhat-chainlink": "^0.0.2",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@nestjs/cli": "^9.5.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
@@ -40,8 +43,6 @@
     "@testing-library/react": "14.0.0",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
-    "@types/aws-lambda": "^8.10.114",
-    "@types/aws-serverless-express": "^3.3.5",
     "@types/cookie-parser": "^1.4.3",
     "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.3",
@@ -53,8 +54,6 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "aws-lambda": "^1.0.7",
-    "aws-serverless-express": "^3.4.0",
     "babel-jest": "^29.4.1",
     "chai": "^4.3.7",
     "chalk": "^4.1.2",
@@ -83,10 +82,6 @@
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "serverless-dynamodb-local": "^0.2.40",
-    "serverless-offline": "^12.0.4",
-    "serverless-plugin-optimize": "4.2.1-rc.1",
-    "serverless-plugin-typescript": "^2.1.4",
     "solidity-coverage": "^0.8.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -107,6 +102,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
+    "@nestjs/microservices": "^9.4.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
@@ -128,6 +124,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "nodemon": "^2.0.22",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^1.5.5",
@@ -139,10 +136,11 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "siwe": "^2.1.4",
+    "swagger-ui-express": "^4.6.3",
     "swiper": "^9.2.4",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.16",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.12",
-    "yup": "^1.1.1"
+    "wagmi": "^0.12.12"
   }
 }
