--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
     "@nestjs/swagger": "^6.3.0",
     "@rainbow-me/rainbowkit": "^0.12.12",
     "@synaps-io/react-verify": "^1.0.3",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -136,6 +138,10 @@
     "react-perfect-scrollbar": "^1.5.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-optimize": "4.2.1-rc.1",
+    "serverless-plugin-typescript": "^2.1.4",
     "siwe": "^2.1.4",
     "swagger-ui-express": "^4.6.3",
     "swiper": "^9.2.4",
