feat: add .package-lock.json
for deployement
feat: back to pnpm for now


chore: add console.log


feat: rename project


feat(.env.example): add synaps webhook secret


fix: kyc schema


fix: change key of table


fix: remove alias


fix: schema


feat: test with addy


fix: remove alias and sandbox


add: session


fix: change scheme


^


schema to dto


test


chore: to comments


chore: uncomment


chore: inline


chore: add debug


chrore: same


chrore: same


chore: change format


^


^


chore: validation


fix


,


fix: table


add: type


feat: bring back jwt


refactor: pr conversation

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@ NEXT_PUBLIC_API_PORT="3000"
 # NEST CONFIG
 IS_DDB_LOCAL=true
 AWS_REGION="eu-west-3"
-AWS_SERVICE="work-aurora-api"
+AWS_DEFAULT_REGION="eu-west-3"
+AWS_SERVICE="work-agora-api"
 AWS_STAGE="dev"
 FRONT_PROTOCOL="http://"
 FRONT_URL="localhost:4200"
@@ -28,3 +29,4 @@ WALLET_PRIVATE_KEY=""
 SYNAPS_CLIENT_ID=""
 SYNAPS_API_KEY=""
 SYNAPS_API_BASE_URL='https://individual-api.synaps.io/v3'
+SYNAPS_WEBHOOK_SECRET=""
