--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "nft.storage": "^7.0.3",
     "nodemon": "^2.0.22",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
