--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "cookie-parser": "^1.4.6",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
+    "fetch-blob": "^4.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.8",
     "i18next": "^22.4.15",
@@ -149,6 +150,7 @@
     "tslib": "^2.3.0",
     "typeorm": "^0.3.16",
     "uuid": "^9.0.0",
-    "wagmi": "^0.12.12"
+    "wagmi": "^0.12.12",
+    "yup": "^1.1.1"
   }
 }
