Feature/dashboard offers (#21)
* feat: start dashboard offers for freelance

* feat: Add most of the blocks for freelance and company on find offers and profiles

* feat: Add a bit of SEO

* feat: Update logo

* feat: Add Offer Details to dashboard for freelancer

* fix: Fix avatar

* feat: Update to get recentFreelancer on gallery

* feat: Update freelance long desc

* feature: Load last freelancer on company main page

* feat: Add limit to prevent overflow on skills length

* feat: Since there is a limit allow more skill displayed

* feature: Change inlineCard on dashboard

* fix: Problem on search, add pagination, add search in company gallery

* feat/freelances-routes (#25)

* feat: recentFreelancer

* feat: searchFreelancer

* fix: Fix search

* feat: Start profile

---------

Co-authored-by: KonyTech <nicolas.cortella@protonmail.com>
Co-authored-by: Jean Cardonne <contact@jcardonne.com>

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -50,8 +50,21 @@ Resources:
           AttributeType: S
         - AttributeName: email
           AttributeType: S
+        - AttributeName: hasFreelanceProfile
+          AttributeType: S
+        - AttributeName: createdAt
+          AttributeType: S
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
         - AttributeName: email
           KeyType: RANGE
+      GlobalSecondaryIndexes:
+        - IndexName: HasFreelanceProfileIndex
+          KeySchema:
+            - AttributeName: hasFreelanceProfile
+              KeyType: HASH
+            - AttributeName: createdAt
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
