feat: Allow to add experience with date picker

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@emotion/react": "^11.10.8",
     "@fontsource/comfortaa": "^4.5.11",
     "@fontsource/montserrat": "^4.5.14",
+    "@mui/material": "^5.13.2",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -112,9 +113,12 @@
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.4.0",
+    "chakra-dayzed-datepicker": "^0.2.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^2.30.0",
+    "dayzed": "^3.2.3",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "fetch-blob": "^4.0.0",
