--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -39,6 +39,18 @@ Resources:
           KeyType: HASH
         - AttributeName: wallet
           KeyType: RANGE
+  ExperienceTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-experience-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: role
+          AttributeType: S
+      KeySchema:
+        - AttributeName: role
+          KeyType: HASH
   UserTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
