feat: Add search and tag
fix: Fix search with context for dashboard


feat: Add new things for profile also add field for user freelance profile


feat: Allow to add experience with date picker


feat: Add a way to create new job


feat: Add some fix


feat/experiences routes (#27)

* feat: experiences routes

* fix: id per experience

* refactor: format + order of exp per date
feat(cid): fix format


feat: experiences routes


fix: id per experience


refactor: format + order of exp per date


feat: create and get job (without bc)


same''


feat(back-job): Delete Job


feat(back-ipfs): JobRecent


feat(back-ipfs): search job

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -18,11 +18,28 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-job-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: GUID
+        - AttributeName: uuid
+          AttributeType: S
+        - AttributeName: contractorWallet
+          AttributeType: S
+        - AttributeName: visibility
+          AttributeType: S
+        - AttributeName: createdAt
           AttributeType: S
       KeySchema:
-        - AttributeName: GUID
+        - AttributeName: uuid
           KeyType: HASH
+        - AttributeName: contractorWallet
+          KeyType: RANGE
+      GlobalSecondaryIndexes:
+        - IndexName: visibilityIndex
+          KeySchema:
+            - AttributeName: visibility
+              KeyType: HASH
+            - AttributeName: createdAt
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
   KycTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
