feat: Add search and tag
fix: Fix search with context for dashboard


fix


fix: Update back for search


feat: Start freelance profile


feat: Add new things for profile also add field for user freelance profile


feat: Add links to profile


feat: Links change possible


feat: Allow to add experience with date picker


feat: Add a way to create new job


feat: Add some fix


fix


feat/experiences routes (#27)

* feat: experiences routes

* fix: id per experience

* refactor: format + order of exp per date
feat: Start to add experience for freelance


feat(cid): fix format


feat: experiences routes


fix: id per experience


refactor: format + order of exp per date


feat: create and get job (without bc)


same''


feat(back-job): Delete Job


feat(back-ipfs): JobRecent


feat(back-ipfs): search job


feat(company): companies routes


fix(company): my-companies


format

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -11,6 +11,22 @@ Resources:
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
+  CompanyTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-company-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: uuid
+          AttributeType: S
+        - AttributeName: companyWallet
+          AttributeType: S
+      KeySchema:
+        - AttributeName: uuid
+          KeyType: HASH
+        - AttributeName: companyWallet
+          KeyType: RANGE
   JobTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
@@ -63,10 +79,10 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-experience-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: uuid
           AttributeType: S
       KeySchema:
-        - AttributeName: id
+        - AttributeName: uuid
           KeyType: HASH
   UserTable:
     Type: AWS::DynamoDB::Table
