--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -11,6 +11,22 @@ Resources:
       KeySchema:
         - AttributeName: wallet
           KeyType: HASH
+  CompanyTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-company-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: uuid
+          AttributeType: S
+        - AttributeName: companyWallet
+          AttributeType: S
+      KeySchema:
+        - AttributeName: uuid
+          KeyType: HASH
+        - AttributeName: companyWallet
+          KeyType: RANGE
   JobTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
@@ -18,11 +34,28 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-job-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: GUID
+        - AttributeName: uuid
+          AttributeType: S
+        - AttributeName: contractorWallet
+          AttributeType: S
+        - AttributeName: visibility
+          AttributeType: S
+        - AttributeName: createdAt
           AttributeType: S
       KeySchema:
-        - AttributeName: GUID
+        - AttributeName: uuid
           KeyType: HASH
+        - AttributeName: contractorWallet
+          KeyType: RANGE
+      GlobalSecondaryIndexes:
+        - IndexName: visibilityIndex
+          KeySchema:
+            - AttributeName: visibility
+              KeyType: HASH
+            - AttributeName: createdAt
+              KeyType: RANGE
+          Projection:
+            ProjectionType: ALL
   KycTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
@@ -46,10 +79,10 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-experience-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: id
+        - AttributeName: uuid
           AttributeType: S
       KeySchema:
-        - AttributeName: id
+        - AttributeName: uuid
           KeyType: HASH
   UserTable:
     Type: AWS::DynamoDB::Table
