--- a/packages/api/tsconfig.app.json
+++ b/packages/api/tsconfig.app.json
@@ -8,5 +8,9 @@
     "target": "es2015"
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../utils/src/interfaces/company.interface.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../utils/src/interfaces/company.interface.ts",
+    "../utils/src/interfaces/job.ts"
+  ]
 }
