feat: Update add recentJob

--- a/packages/api/resource/seed.yml
+++ b/packages/api/resource/seed.yml
@@ -4,3 +4,5 @@ user:
       sources: [./packages/api/resource/seeds/user.json]
     - table: work-agora-api-dev-company-table
       sources: [./packages/api/resource/seeds/company.json]
+    - table: work-agora-api-dev-job-table
+      sources: [./packages/api/resource/seeds/jobs.json]
