feat: Handle job create and job gallery display
feat(jobs-gallery-and-search): add company uuid in job


feat: Update add recentJob


update and add search for jobs


feat(jobs-gallery-and-search): search in tags

feat(jobs-gallery-and-search): add company to jobs return 


fix(jobs-gallery-and-search): jobs.json


feat: Fix job card and add search in gallery


fix: Fix job interface


feat(jobs-gallery-and-search): add pagination for recent + handle empty searchTerm


feat(jobs-gallery-and-search): change separator to ; + get by uuid


feat: Refacto offers details with data

fix: Fix problem on location


feat: Add back button


feat(chat): WIP chat messages


feat(chat): routes


feat(chat): WIP chat messages


feat(chat): routes

--- a/package.json
+++ b/package.json
@@ -101,14 +101,16 @@
     "@fontsource/montserrat": "^4.5.14",
     "@mui/material": "^5.13.2",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "9.4.2",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "9.4.2",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.1",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/platform-socket.io": "^9.4.2",
     "@nestjs/swagger": "^6.3.0",
+    "@nestjs/websockets": "^9.4.2",
     "@rainbow-me/rainbowkit": "^0.12.12",
     "@synaps-io/react-verify": "^1.0.3",
     "aws-lambda": "^1.0.7",
@@ -150,6 +152,7 @@
     "serverless-plugin-optimize": "4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.4",
     "siwe": "^2.1.4",
+    "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.3",
     "swiper": "^9.2.4",
     "tslib": "^2.3.0",
