wip(chat): instance

--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -18,11 +18,15 @@ Resources:
       TableName: ${self:service}-${self:provider.stage}-chat-table
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: uuid
+        - AttributeName: PK
+          AttributeType: S
+        - AttributeName: SK
           AttributeType: S
       KeySchema:
-        - AttributeName: uuid
+        - AttributeName: PK
           KeyType: HASH
+        - AttributeName: SK
+          KeyType: RANGE
   CompanyTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
