--- a/packages/api/resource/dynamodb.yml
+++ b/packages/api/resource/dynamodb.yml
@@ -107,6 +107,22 @@ Resources:
           KeyType: HASH
         - AttributeName: wallet
           KeyType: RANGE
+  NotificationsTable:
+    Type: AWS::DynamoDB::Table
+    DeletionPolicy: Delete
+    Properties:
+      TableName: ${self:service}-${self:provider.stage}-notifications-table
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: userWallet
+          AttributeType: S
+        - AttributeName: createdAt
+          AttributeType: S
+      KeySchema:
+        - AttributeName: userWallet
+          KeyType: HASH
+        - AttributeName: createdAt
+          KeyType: RANGE
   ExperienceTable:
     Type: AWS::DynamoDB::Table
     DeletionPolicy: Delete
