--- a/packages/api/resource/seed.yml
+++ b/packages/api/resource/seed.yml
@@ -6,3 +6,5 @@ user:
       sources: [./packages/api/resource/seeds/company.json]
     - table: work-agora-api-dev-job-table
       sources: [./packages/api/resource/seeds/jobs.json]
+    - table: work-agora-api-dev-notifications-table
+      sources: [./packages/api/resource/seeds/notifications.json]
