feat: Add price feed in contract form

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 NEXT_PUBLIC_BC_ENV="development"
 NEXT_PUBLIC_API_URL="localhost"
 NEXT_PUBLIC_API_PORT="3000"
+NEXT_PUBLIC_PRICE_FEED="0x805Edf577C311Cf42Bb317e08Aa07e8fD94D48Ba"
 
 # NEST CONFIG
 IS_DDB_LOCAL=true
