feat: Change runner for nx

--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,12 @@
     "defaultBase": "master"
   },
   "tasksRunnerOptions": {
-
+    "default": {
+      "runner": "nx/tasks-runners/default",
+      "options": {
+        "cacheableOperations": ["build", "test"]
+      }
+    }
   },
   "targetDefaults": {
     "build": {
