--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ TENDERLY_USERNAME=""
 NEXT_PUBLIC_TESTNET_RPC_URL="https://rpc.ankr.com/avalanche_fuji"
 NEXT_PUBLIC_MAINNET_RPC_URL="https://avalanche-c-chain.publicnode.com"
 NEXT_PUBLIC_BC_ENV="development"
-NEXT_PUBLIC_API_URL="localhost:3000"
+NEXT_PUBLIC_API_URL="http://localhost:3000"
 NEXT_PUBLIC_PRICE_FEED="0x805Edf577C311Cf42Bb317e08Aa07e8fD94D48Ba"
 
 # NEST CONFIG
