--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # SOLIDITY CONFIG
 SNOWTRACE_API_KEY=""
 COINMARKETCAP_API_KEY=""
-PRIVATE_KEY=""
+HARDHAT_PRIVATE_KEYS=""
+BACKEND_PV_KEY=""
 
 TENDERLY_FORK=""
 TENDERLY_PROJECT=""
