--- a/packages/solidity/tsconfig.json
+++ b/packages/solidity/tsconfig.json
@@ -10,6 +10,6 @@
     "resolveJsonModule": true,
   },
   "files": ["./hardhat.config.ts"],
-  "include": ["./scripts", "./test", "./typechain-types"],
+  "include": ["./scripts", "./test", "./configs", "./typechain-types"],
   "references": []
 }
